syntax = "proto3";

import "aelf/core.proto";

option csharp_namespace = "AElf.Kernel.SmartContract";

message TransactionResourceInfo {
    repeated aelf.ScopedStatePath paths = 1;
    ParallelType parallel_type = 2;
    aelf.Hash transaction_id = 3;
    aelf.Hash contract_hash = 4;
    bool is_contract_remarks = 5;
}

enum ParallelType {
    PARALLELIZABLE = 0;
    NON_PARALLELIZABLE = 1;
    INVALID_CONTRACT_ADDRESS = 2;
}

message ContractRemarks {
    aelf.Address contract_address = 1;
    repeated CodeRemark code_remarks = 2; 
}

message CodeRemark{
    aelf.Hash code_hash = 1;
    bool non_parallelizable = 2;
    aelf.Hash block_hash = 3;
    int64 block_height = 4;
}